Added github workflow.